# design_patterns_c

./: .gitignore  README.md
src/: CMakeLists.txt  cpp.hint  src.c  src.cpp  src.h
src/creation_patterns/: utils_macros.h
src/creation_patterns/factory_pattern/: factory_pattern.c  factory_pattern.h
src/creation_patterns/factory_pattern/shape/: shape.c  shape.h
src/creation_patterns/object_pattern/: object_pattern.c
src/creation_patterns/object_pattern/my_object/: my_object.c  my_object.h
src/creation_patterns/opaque_pattern/: opaque_pattern.c  opaque_pattern.h
src/creation_patterns/opaque_pattern/opaque/: opaque.c  opaque.h
src/creation_patterns/singleton_pattern/: singleton_pattern.c  singleton_pattern.h
src/creation_patterns/singleton_pattern/singleton_object/: singleton_object.c  singleton_object.h
